@@ -65,9 +65,11 @@ public class FeatureMetaDataExporter {
                 writer.add(factory.createAttribute("name", name));
                 Artifact artifact = bundle.getArtifact();
                 bundle.readManifest();
-                String[] results = bundle.getBundleSymbolicName().split(";");
-                writer.add(factory.createAttribute("Bundle-SymbolicName", results[0]));
-                writer.add(factory.createAttribute("Bundle-Version", bundle.getBundleVersion()));
+                if (bundle.getBundleSymbolicName() != null) {
+                    String[] results = bundle.getBundleSymbolicName().split(";");
+                    writer.add(factory.createAttribute("Bundle-SymbolicName", results[0]));
+                    writer.add(factory.createAttribute("Bundle-Version", bundle.getBundleVersion()));
+                }
                 writer.add(factory.createAttribute("groupId", artifact.getGroupId()));
                 writer.add(factory.createAttribute("artifactId", artifact.getArtifactId()));
                 if (artifact.getType() != null) {
